crates/csl/src/style/snapshots/csl__style__info__test__empty_localized_string.snap
---
source: crates/csl/src/style/info.rs
expression: "parse_as::<LSHelper<TitleHint>>(r#\"<str></str>\"#).map(|x| x.string)"
---
Err(
    CslError(
        [
            InvalidCsl {
                severity: Error,
                range: 0..11,
                message: "<str> empty, expected text",
                hint: "enter a full title for this style, like \"My Example Citation Style, 3rd Edition\"",
            },
        ],
    ),
)
