crates/csl/src/style/snapshots/csl__style__info__test__info.snap
---
source: crates/csl/src/style/info.rs
expression: "crate::from_node::parse_as::<Info>(::indoc::indoc!(r#\"\n            <info>\n                <id>https://example.com/mystyle</id>\n                <updated>2020-01-01T00:00:00Z</updated>\n                <title>My CSL Style</title>\n            </info>\n        \"#)).expect(\"did not parse\")"
---
Info {
    id: Url(
        "https://example.com/mystyle",
    ),
    updated: 2020-01-01T00:00:00+00:00,
    title: LocalizedString {
        value: "My CSL Style",
        lang: None,
    },
    title_short: None,
    rights: None,
    summary: None,
    parent: None,
    links: [],
    citation_format: None,
    categories: [],
    issn: None,
    eissn: None,
    issnl: None,
}
