crates/csl/src/style/snapshots/csl__style__info__test__info_empty_is_error.snap
---
source: crates/csl/src/style/info.rs
expression: "crate::from_node::parse_as::<Info>(::indoc::indoc!(r#\"<info></info>\"#)).expect_err(\"should have failed with errors\")"
---
CslError(
    [
        InvalidCsl {
            severity: Error,
            range: 0..13,
            message: "Must have exactly one <id>",
            hint: "",
        },
        InvalidCsl {
            severity: Error,
            range: 0..13,
            message: "Must have exactly one <updated>",
            hint: "",
        },
        InvalidCsl {
            severity: Error,
            range: 0..13,
            message: "Must have exactly one <title>",
            hint: "",
        },
    ],
)
