crates/csl/src/style/snapshots/csl__style__info__test__link.snap
---
source: crates/csl/src/style/info.rs
expression: "crate::from_node::parse_as::<Link>(::indoc::indoc!(r#\"<link rel=\"self\" href=\"https://example.com\" />\"#)).expect(\"did not parse\")"
---
Link {
    href: Url(
        "https://example.com/",
    ),
    rel: RelSelf,
    lang: None,
}
