crates/csl/src/style/snapshots/csl__style__info__test__localized_string-2.snap
---
source: crates/csl/src/style/info.rs
expression: "crate::from_node::parse_as::<LSHelper<TitleHint>>(::indoc::indoc!(r#\"<str />\"#)).expect_err(\"should have failed with errors\")"
---
CslError(
    [
        InvalidCsl {
            severity: Error,
            range: 0..7,
            message: "<str> empty, expected text",
            hint: "enter a full title for this style, like \"My Example Citation Style, 3rd Edition\"",
        },
    ],
)
